# MachineLearningNotes

Advanced Learning Algorithms/C2_W1_2/: C2_W1_Assignment_Finished.ipynb
Advanced Learning Algorithms/C2_W2_2/: C2_W2_Assignment.ipynb
Advanced Learning Algorithms/C2_W3_1/: C2W3_Lab_01_Model_Evaluation_and_Selection.ipynb
Advanced Learning Algorithms/C2_W4_1/: C2_W4_Lab_01_Decision_Trees.ipynb
Cuda/section1/: Introduction to CUDA Python with Numba.ipynb
Cuda/section2/: Custom CUDA Kernels in Python with Numba.ipynb
Cuda/section3/: Effective Memory Use.ipynb
Supervised Machine Learning Regression and Classification/C1_W2/: C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb
Unsupervised machine learning/: C3_W1_KMeans_Assignment.ipynb
Unsupervised machine learning/C3_W2_1/: C3_W2_Collaborative_RecSys_Assignment.ipynb
makemore/: makemore_part1_bigrams.ipynb  makemore_part2_mlp.ipynb  makemore_part3_bn.ipynb  makemore_part4_backprop.ipynb  makemore_part5_cnn1.ipynb
stanford-cs336/assignment3-scaling/: CODING_PREFERENCES.md  README.md  Requirements.md  WRITEUP_TEMPLATE.md  api_key.txt.template  fix_line_endings.sh  pyproject.toml
stanford-cs336/assignment3-scaling/part1_isoflops/: README.md  fit_scaling_laws.py  run_part1.sh
stanford-cs336/assignment3-scaling/part2_scaling_laws/: README.md  api_client.py  experiment_design.py  generate_submission.py  hyperparameter_selector.py  run_experiments.py  run_part2.sh  scaling_law_fitter.py  test_api_connection.py
stanford-cs336/assignment3-scaling/results/part1_isoflops/: scaling_law_results.json
(+748 files in other folders)
